add get and delete user by id
